--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 input {
   padding: 4.4%;
-  margin-bottom: 0%;
-  margin-top: 21%;
+  color: #202124;
 }
 
 .full-width {
@@ -42,7 +41,7 @@ input {
   text-indent: initial;
   border-spacing: 2px;
   font-weight: normal;
-  padding: 0rem;
+  padding: 0%;
 }
 
 .btn.btn1:active {
@@ -94,7 +93,6 @@ input {
 
 .btn.btn2:focus {
   background: #f1f3f4;
-  box-shadow: 2px 2px 5px #808080;
 }
 
 .btn3 {
@@ -114,7 +112,7 @@ input {
   text-indent: initial;
   border-spacing: 2px;
   font-weight: normal;
-  padding: 0rem;
+  padding: 0%;
 }
 
 .btn.btn3:active {
@@ -131,7 +129,6 @@ input {
 
 .btn.btn3:focus {
   background: #dadce0;
-  box-shadow: 2px 2px 5px #808080;
 }
 
 .btn.btn4 {
@@ -167,10 +164,28 @@ input {
 
 .btn.btn4:focus {
   background: #4285f4;
-  box-shadow: 2px 2px 5px #808080;
   color: #ffffff;
 }
 
 #point {
   font-size: 18px;
+}
+
+#info {
+  position: relative;
+  right: 43%;
+  top: 55%;
+  color: #202124;
+}
+
+#answer {
+  position: relative;
+  top: 30%;
+  color: #808080;
+}
+
+ul {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
 }
